// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textarea-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = error 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some error message.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`textarea-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = success 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some success message.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`textarea-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Textarea when state = error 1`] = `
Object {
  "invalid": "true",
  "multiline": true,
  "name": "Some label. Some error message.",
  "role": "textbox",
}
`;

exports[`textarea-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Textarea when state = none 1`] = `
Object {
  "multiline": true,
  "name": "Some label",
  "role": "textbox",
}
`;

exports[`textarea-wrapper accessibility should add/remove accessibility tree properties if state changes programmatically: Of Textarea when state = success 1`] = `
Object {
  "multiline": true,
  "name": "Some label. Some success message.",
  "role": "textbox",
}
`;

exports[`textarea-wrapper accessibility should expose correct accessibility tree properties in error state: Of Message 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some error message",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`textarea-wrapper accessibility should expose correct accessibility tree properties in error state: Of Textarea 1`] = `
Object {
  "invalid": "true",
  "multiline": true,
  "name": "Some label. Some error message",
  "role": "textbox",
}
`;

exports[`textarea-wrapper accessibility should expose correct accessibility tree with description text 1`] = `
Object {
  "multiline": true,
  "name": "Some label. Some description",
  "role": "textbox",
}
`;

exports[`textarea-wrapper accessibility should expose correct initial accessibility tree 1`] = `
Object {
  "multiline": true,
  "name": "Some label",
  "role": "textbox",
}
`;
